Thu Aug 30 18:59:15 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c:
   - Instead of using malloc() / automatic variables and clearing
     the contents before use with memset, use calloc right away.
   - Allocate pDesc->item in one chunk and realloc it when we know
     how many reports we have once, instead of realloc'ing it one
     item at a time.
   - Removed redundant copy of ReportDesc (is not modified, so we
     can use that).
 * drivers/belkin-hid.[ch]:
   - BELKIN_HID_VERSION was defined twice.

Thu Aug 30 06:59:50 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c:
   - Dirty way of clearing replen (which happens to be an int, not
     a char) leaves uninitialised values.

Tue Aug 28 20:46:34 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/belkin-hid.c:
   - Fix memory leak in belkin_format_serial()
 * drivers/apc-hid.c:
   - A call to apc_format_model() could change the contents of the
     hd->Product string. This is undesireable.
 * drivers/mge-hid.c:
   - Cleaned up mge_format_model().
 * drivers/usbhid-ups.c:
   - The vendor-specific method for calculating human-readable
     strings for manufacturer, model, and serial are back in
     upsdrv_initinfo to make sure the above problems don't lead
     to problems in the future.

Mon Aug 27 18:33:37 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid.c:
   - Mental note: "close all source files *before* comitting, to
     prevent the one character that you modified from missing the
     commit."

Mon Aug 27 18:23:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch],libshut.[ch],libusb.[ch]:
   - Cut the libshut and libusb objects loose from libhid. If no HID
     functions are used (megatec_usb, tripplite_usb), you no longer
     need to include libhid anymore. The USB matcher functions (which
     were not really HID specific functions) are now within libusb.
 * drivers/megatec_usb.c,tripplite_usb.c,Makefile.am: